# FYP

./: CMakeLists.txt  PGS Pseudocode.h  README.md  TODO.txt
benchmarks/: rainfall-16.csv  rainfall-8.csv  rainfall-baseline.csv  rainfall.csv
benchmarks/Rainfall/: rainfall-1.csv  rainfall-1024.csv  rainfall-128.csv  rainfall-16.csv  rainfall-2048.csv  rainfall-256.csv  rainfall-32.csv  rainfall-4.csv  rainfall-4096.csv  rainfall-512.csv  rainfall-64.csv  rainfall-8.csv
benchmarks/Rainfall/analysed/: Analysed.xlsx
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST1/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST2/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST3/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST4/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST5/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST6/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST7/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/gtx1060_6GB/Raw/TEST8/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
benchmarks/Rainfall/t1/Raw/: 1.csv  1024.csv  128.csv  16.csv  2048.csv  256.csv  32.csv  4.csv  4096.csv  512.csv  64.csv  8.csv
data/kernel_code/: PipelineTypes.cl
data/shaders/: Simple.frag  Simple.vert
include/: FYP.h
kernel_code/: AdjustPos.txt  PipelineTypes.txt  test.txt
shaders/: Simple.frag  Simple.vert
src/Demo/: RenderContext.cpp  RenderContext.h  main.cpp
src/FYP/: Body.cpp  Body.h  BodyStruct.h  Context.cpp  Context.h  Pipeline.cpp  Pipeline.h  Program.cpp  Program.h  util.h
src/cpu/: RB.cpp  RB.h  Util.h  main.cpp
src/fyp/: Context.cpp  Context.h  main.cpp  util.h
